# photoncore-x-design

./: .gitignore  PRODUCT_CARD.md  README.md  photoncore_design.tar.gz.enc  photoncore_v2_improvements.tar.gz.enc
benchmarks/: attention_photonic.py  mnist_photonic.py  quick_benchmark.py
photoncore_prototype/: README.md  requirements.txt
photoncore_prototype/benchmarks/: benchmark_suite.py
photoncore_prototype/examples/: mnist_inference.py
photoncore_prototype/src/: __init__.py  calibration.py  clements.py  mzi.py  optical_mvm.py  photoncore.py  wdm.py
photoncore_rust/: Cargo.toml
photoncore_rust/src/: calibration.rs  clements.rs  lib.rs  mzi.rs  optical_mvm.rs  wdm.rs
photoncore_tinygrad/: benchmark_backend.py  photonic_backend.py
prototype/: hardware_abstraction.py
prototype/phase1_physics/: realistic_mzi.py
prototype/phase2_fpga/: photoncore_fpga.v
prototype/phase3_benchtop/: benchtop_controller.py  bill_of_materials.md  first_optical_mvm.py  mesh_4x4.py
prototype/phase4_foundry/: SUBMISSION_README.md  photoncore_16port.gds  photoncore_64port.gds  photoncore_8port.gds  photoncore_gds_generator.py
