[package]
name = "photoncore"
version = "0.1.0"
edition = "2021"
authors = ["Worm <worm@photoncore.ai>"]
description = "PhotonCore-X Photonic AI Accelerator Simulation"
license = "MIT"

[lib]
name = "photoncore"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "photoncore_benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
